<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activities"
    android:orientation="vertical"
    tools:context=".activities.ViewUsersActivity">


    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/playfair_bold"
        android:text="back"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/usernameDisplayTextView"
        app:layout_constraintEnd_toStartOf="@+id/backButtonSpacer"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@drawable/background_activities"
        android:fontFamily="@font/merriweather"
        android:gravity="center"
        android:text="@string/viewing_users"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/clickTheUsernamePrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/click_the_usernames_to_edit"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/editingUserPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="You are editing:"
        android:textColor="@color/black"
        android:visibility="invisible"
        android:textSize="24sp" />


    <EditText
        android:id="@+id/usernameLoginEditText"
        android:layout_width="303dp"
        android:layout_height="49dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edittext_borders"
        android:gravity="center"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/changeUsernameButton"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/playfair_bold"
        android:text="@string/change_username"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/usernameDisplayTextView"
        app:layout_constraintEnd_toStartOf="@+id/backButtonSpacer"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordLoginEditTextView"
        android:layout_width="303dp"
        android:layout_height="49dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edittext_borders"
        android:gravity="center"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <Button
        android:id="@+id/changePasswordsButton"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/playfair_bold"
        android:text="@string/change_password"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/usernameDisplayTextView"
        app:layout_constraintEnd_toStartOf="@+id/backButtonSpacer"
        app:layout_constraintStart_toStartOf="parent" />


</LinearLayout>