<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ratTitleLogoImageView"
        android:layout_width="277dp"
        android:layout_height="268dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"
        app:srcCompat="@drawable/rat"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/welcomeFighterLoginTextView"
        android:layout_width="255dp"
        android:layout_height="36dp"
        android:layout_margin="16dip"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="420dp"
        android:gravity="center"
        android:text="@string/welcome_fighter"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratTitleLogoImageView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:id="@+id/startBattleButton"
        android:text="@string/start_battle"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeFighterLoginTextView" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:id="@+id/viewMonstersButton"
        android:text="@string/view_monsters"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startBattleButton" />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:id="@+id/viewRecentBattleButton"
        android:text="@string/view_recent_battles"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewMonstersButton" />




</androidx.constraintlayout.widget.ConstraintLayout>