<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activities"
    tools:context=".activities.SignupActivity">

    <LinearLayout
        android:id="@+id/signupCenterLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417">

        <ImageView
            android:id="@+id/titleSignUpTextView"
            android:layout_width="308dp"
            android:layout_height="128dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButtonSignup"
            app:layout_constraintVertical_bias="0.034"
            app:srcCompat="@drawable/ratwithtitle"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/createAccountSignUpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dip"
            android:layout_marginTop="184dp"
            android:fontFamily="@font/merriweather"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="11"
            android:text="@string/create_an_account"
            android:textColor="@color/green"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/usernameSignUpEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:autofillHints="Please enter username"
            android:background="@drawable/edittext_borders"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="text"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/passwordSignUpEditTextView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:autofillHints="Please enter username"
            android:background="@drawable/edittext_borders"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="32sp"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/button_borders"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:id="@+id/userDisplaySpacer"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/usernameDisplayTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameDisplayTextView"
        android:layout_width="90dp"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/merriweather"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userDisplaySpacer"
        app:layout_constraintTop_toTopOf="parent" />


    <Space
        android:id="@+id/backButtonSpacer"
        android:layout_width="225dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/playfair_bold"
        android:text="back"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/usernameDisplayTextView"
        app:layout_constraintEnd_toStartOf="@+id/backButtonSpacer"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>